<resources>
    <string name="app_name">Portál - Brány Skeldalu</string>

    <string name="tagstab_header_init">Init</string>
    <string name="tagstab_header_discover">Amulet</string>
    <string name="userstab_header_new">Nový hráč</string>

    <string name="allow_all_permissions">Povol všechna oprávnění!!!</string>
    <string name="tag_init_insert_tag">Přilož amulet</string>
    <string name="tag_init_done">Amulet inicializován!</string>
    <string name="tag_init_failure">Chyba inicializace amuletu!</string>

    <string name="button_synchronization">Synchronizace</string>
    <string name="button_batch">Dávka</string>
    <string name="button_users_and_skills">Hráči a schopnosti</string>

    <string name="button_sync_data">Synchronizuj data</string>
    <string name="button_delete_data">Smaž data</string>
    <string name="button_ip_range">IP range</string>
    <string name="button_init_tag">Inicializace amuletu</string>
    <string name="button_save">Ulož</string>


    <string name="data_synchronized">Data synchronizována!</string>
    <string name="data_deleted">Data smazána!</string>
    <string name="time_updated">Čas nastaven!</string>
    <string name="tag_initialized">Amulet inicializován!</string>
    <string name="user_created">Uživatel vytvořen!</string>

    <string name="read_tag_info_text">Přiložte amulet k mobilnímu zařízení</string>
    <string name="read_tag_generic_error">Chyba při čtení amuletu, zkuste jej přiložit znovu.</string>
    <string name="read_tag_lost_connection">Amulet byl během čtení/zápisu odebrán. Data nebyla úspěšně přenesena.</string>
    <string name="read_tag_possibly_invalid">Přiložený amulet může být vadný, zkuste operaci zopakovat.</string>

    <string name="err_missing_name">Je třeba vyplnit jméno!</string>
    <string name="err_user_not_created">Uživatel nebyl vytvořen!</string>
    <string name="err_user_already_exists">Uživatel s tímto jménem již existuje!</string>

    <string name="player_strength">Síla</string>
    <string name="player_dexterity">Obratnost</string>
    <string name="player_magic">Magie</string>
    <string name="player_bonus_points">Bonusové body</string>

    <string name="player_name_none">- none -</string>
    <string name="zero_stat">00</string>
    <string name="revert_changes">Vrátit úpravy</string>
    <string name="write_to_tag">Přilož amulet hráče %1$s.</string>
    <string name="data_written">Data hráče úspěšně uložena</string>
    <string name="data_imported">Data hráče úspěšně importována</string>
    <string name="writing_data_failed">Zápis dat na amulet selhal. Opakujte pokus.</string>
    <string name="inconsistent_data">Data na amuletu a v zařízení nejsou konzistentní.</string>
    <string name="q_delete_data">Opravdu smazat data v zařízeních?</string>
    <string name="q_import_data">Opravdu importovat data tohoto hráče?</string>
    <string name="ok">OK</string>
    <string name="remove">Smazat</string>
    <string name="userstab_header_list">Hráči</string>
    <string name="search_hint">vyhledávání</string>
    <string name="button_backup">Záloha</string>
    <string name="backup_done">Záloha dokončena</string>
    <string name="backup_started">Zálohuji…</string>
    <string name="cancel">Zrušit</string>
    <string name="backup_loaded">Data aktualizována ze zálohy</string>
    <string name="backup_load_failed">Načítání zálohy selhalo</string>
    <string name="backup_failed">Nahrávání zálohy selhalo</string>
    <string name="button_backup_load">Načtení dat ze zálohy</string>
    <string name="backup_loading">Stahuji zálohu…</string>
    <string name="button_save_and_init">Ulož a nahraj na amulet</string>
    <string name="check_network_connection">Zkontroluj připojení k internetu</string>
    <string name="strength_limit">Síla: %1$d</string>
    <string name="magic_limit">Magie: %1$d</string>
    <string name="dexterity_limit">Obratnost: %1$d</string>
    <string name="userstab_header_skills">Schopnosti</string>
    <string name="userdetail_tab_overview">Přehled</string>
    <string name="user_skills_label">Získané schopnosti</string>
    <string name="add">Přidej</string>
    <string name="dialog_force_add_skill">Hráč nemá dostatečné vlastnosti pro tuto schopnost, opravdu ji cheš přidat?</string>
    <string name="dialog_rewrite_tag">Snažíš se zapsat na amulet jiného hráče, opravdu to chceš?</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="player_group">Skupina</string>
    <string name="total_amount_of_points">Celkový počet bodů:</string>
    <string name="group_header">Skupina</string>
    <string name="groups_header">Skupiny</string>
    <string name="rank_header">Umístění</string>
    <string name="batch_mode">Dávkový režim</string>
    <string name="writing_data_ok">Data zapsána na amulet!</string>
</resources>