<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/skill_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="skill-name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strength_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/strength_limit"
        android:textColor="@color/green"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/skill_name"
        app:layout_constraintTop_toBottomOf="@+id/skill_name" />

    <TextView
        android:id="@+id/magic_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/magic_limit"
        android:textColor="#4CAF50"
        android:textSize="12sp"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@+id/strength_limit"
        app:layout_constraintTop_toBottomOf="@+id/skill_name" />

    <TextView
        android:id="@+id/dexterity_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/dexterity_limit"
        android:textColor="#4CAF50"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/magic_limit"
        app:layout_constraintTop_toBottomOf="@+id/skill_name" />
</androidx.constraintlayout.widget.ConstraintLayout>